[gd_scene load_steps=4 format=3 uid="uid://kph7vv3bwhye"]

[ext_resource type="Script" path="res://Scripts/money.gd" id="1_dkijf"]
[ext_resource type="Texture2D" uid="uid://mouf1spivuea" path="res://assets/truck/bills.png" id="1_gx727"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbwr6"]
size = Vector2(61, 32)

[node name="Money" type="Area2D"]
script = ExtResource("1_dkijf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_gx727")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_rbwr6")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
